components/r9i4i6hgs-python/base/service.yaml
apiVersion: v1
kind: Service
metadata: 
  labels: 
    app.kubernetes.io/instance: r9i4i6hgs-python
    app.kubernetes.io/managed-by: kustomize
    app.kubernetes.io/name: r9i4i6hgs-python 
  name: r9i4i6hgs-python
spec:
  ports:
  - port: 8081 
    targetPort: 8081 
  selector:
    app.kubernetes.io/instance: r9i4i6hgs-python
