components/r9i4i6hgs-python/base/route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata: 
  labels: 
    app.kubernetes.io/instance: r9i4i6hgs-python
    app.kubernetes.io/managed-by: kustomize
    app.kubernetes.io/name: r9i4i6hgs-python 
  name: r9i4i6hgs-python
spec:
  port:
    targetPort: 8081 
  tls:
    insecureEdgeTerminationPolicy: Redirect
    termination: edge
  to:
    kind: Service
    name: r9i4i6hgs-python
    weight: 100
